Bug 55524 - UI: Hang when accessing "Insert > Manual Break..."
Summary: UI: Hang when accessing "Insert > Manual Break..."
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) All
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:3.7.0
Keywords: regression
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2012-10-02 06:47 UTC by Roman Eisele
Modified: 2012-10-04 15:43 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Log file for hang in LOdev 2012-09-30, on Mac OS X 10.6.8 (152.72 KB, text/plain)
2012-10-02 06:47 UTC, Roman Eisele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Eisele 2012-10-02 06:47:37 UTC
Created attachment 67967 [details]
Log file for hang in LOdev 2012-09-30, on Mac OS X 10.6.8

When I try to access the “Insert Break” dialog window via “Insert > Manual Break...”, LOdev hangs indefinitely.

I have observed this in the LOdev build:
  LOdev 3.7.0.0.alpha0+, build ID: 3f84462b, pull time: 2012-09-30 06:38:06

The problem is NOT present in this build:
  LOdev 3.7.0.0.alpha0+, build ID: 30d33b1,  pull time: 2012-09-27 04:27:30

So a regression in a 3 days timeframe; maybe related to the (cool!) new WidgetLayout -- did something go wrong in the conversion? Other dialogs touched by the conversion (Word count, “Paragraph”, etc.) are still accessible.


Steps to reproduce:
0) Rename your user profile folder, in order to preclude any influence
   of special settings etc.
1) Start LOdev;
   -> The Start Center window appears.
2) Click on the “Text Document” button;
   -> A new, empty Writer window opens.
3) Select “Insert > Manual Break...” from the menu bar;
   -> expected result: the “Insert Break” dialog window opens;
   -> actual result: LOdev hangs indefinitely.

NB: No Mac OS Accessibility options or related utilities activated!

I attach the log file created by Mac OS X when I had to force-quit LOdev. To me, the end of the stack trace:
  5 Window::ImplGrabFocus(unsigned short) + 335 (in libvcllo.dylib) [0x237399f]
  4 Window::ImplGrabFocus(unsigned short) + 341 (in libvcllo.dylib) [0x23739a5]
  2 Window::ImplGrabFocus(unsigned short) + 353 (in libvcllo.dylib) [0x23739b1]
  2 Window::ImplGrabFocus(unsigned short) + 351 (in libvcllo.dylib) [0x23739af]
looks like some infinite recursion, but the developers will know better ;-)
Comment 1 Roman Eisele 2012-10-02 07:18:35 UTC
For the sake of completeness --
Hang still present in the latest Mac OS master build:
  LOdev 3.7.0.0.alpha0+, build ID: b966a09, pull time: 2012-10-01 23:33:15
Comment 2 Miklos Vajna 2012-10-02 07:41:57 UTC
Confirmed on Linux as well, I saw that yesterday with commit d83de4b1a93ba7ed7bc3243073be3de96a44bfa9 and wasn't sure if it's a local problem. ;-)
Comment 3 Roman Eisele 2012-10-02 09:02:36 UTC
@ Miklos:
Thank you for confirming!
Comment 4 Not Assigned 2012-10-02 12:22:51 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ad09ced9f63be77831aab6708b2afa2861ff0eaa

Resolves: fdo#55524 convert insert break dialog fully



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2012-10-02 12:26:20 UTC
that should fix it
Comment 6 Roman Eisele 2012-10-04 15:43:16 UTC
@ Caolán: Thank you very much for fixing this so fast!


VERIFIED as FIXED with LOdev 3.7.0.0.alpha0+ (Build ID: dd11a1e, pull time: 2012-10-04 12:52:50) on Mac OS X 10.6.8 (Intel).

“Insert Break” dialog works again as before. Not only the crash is fixed, I have also tried all possible settings, and everything is fine. Great!