Resolves: fdo#55524 convert insert break dialog fully

Change-Id: Id25bde8db310a83b52ebda7d47d0b1dcda79ed45